# flac-cue-split

./: Cargo.toml  README.md  build.rs
.cargo/: config.toml
.github/workflows/: rust.yml
src/: app.rs  cli.rs  cue.rs  decoder.rs  flac.rs  lib.rs  main.rs  metadata.rs  output.rs  picture.rs  split.rs  tests.rs  types.rs  ui.rs  wavpack.rs
tests/: generated_silence_split.rs
